update code to show multimedia files
